2004-10-27  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 13 frozen

2004-10-23  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.h (set_float_to_string_precision): Added to protected API.
	* eca-control-base.h (float_to_string_precision): Added to public API.
	* eca-control-base.h (set_float_to_string_precision_rep): Added to protected API.

2004-07-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* audioio-aac.h: Added.

2004-07-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-format.h (Sample_endianess, set_sample_endianess, sample_endianess): Added.
	* eca-audio-format.h (Sample_coding, set_sample_coding, sample_coding): Added.
	* audioio-forked-stream.h (fork_command): Added.
	* audioio-flac.h: Added.
        * library interface version to 13:0:4

2004-05-05  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 12 frozen

2004-05-04  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-object-factory.cpp (probe_default_output_device): Added.

2004-05-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chain.h (operator_params_to_string): Added.
        * library interface version to 12:0:3

2003-08-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 11 frozen

2003-08-26  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h (multitrack_mode_offset): Added.

2003-08-14  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.h (engine_start): Moved to public
	scope, signature changed.

2003-08-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.cpp (add_default_midi_device): Added.

2003-05-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h (set_samples_per_second_keeptime): Added. 
	* library version to 11:0:2

2003-02-15  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 10 frozen
	
2003-02-05  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-engine.cpp (is_finite_length): Added.

2003-02-03  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
